--- a/_includes/partials/nav-proj.html
+++ b/_includes/partials/nav-proj.html
@@ -8,10 +8,13 @@
 
 <style>
 .nav-buttons {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
     align-items: center;
+    margin-left: auto;
+    justify-content: flex-end;
 }
 
 .nav-buttons .icon-link {
