--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -28,6 +28,8 @@
 <style>
 .intro-section {
   width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .intro-section a {
@@ -42,6 +44,7 @@
 .intro-section p {
   margin-bottom: 0.5rem;
   font-size: 1.125rem;
+  text-align: center;
 }
 
 .intro-section .hello-text {
@@ -63,6 +66,7 @@
 /* Intro block styles */
 .intro-block {
   margin-bottom: 1.5rem;
+  text-align: center;
 }
 
 .intro-label {
@@ -106,6 +110,8 @@
   padding-left: 1.5rem;
   line-height: 1.5;
   list-style-type: square;
+  text-align: left;
+  display: inline-block;
 }
 
 .intro-list-item {
@@ -119,6 +125,7 @@
     width: 100%;
     overflow: hidden;
     margin-bottom: 1rem;
+    max-width: 100%;
   }
   .introduction {
     width: 100%;
@@ -130,6 +137,15 @@
   }
   .intro-section .hello-text {
     font-size: 1rem !important;
+  }
+  .intro-section p {
+    text-align: left;
+  }
+  .intro-block {
+    text-align: left;
+  }
+  .intro-list {
+    display: block;
   }
 }
 
