--- a/_includes/layouts/profile.html
+++ b/_includes/layouts/profile.html
@@ -5,6 +5,8 @@
         </div>
         <div class="profile-info">
             <div class="profile-name">{{ site.author }}</div>
+            <div class="profile-position">Ph.D. Student</div>
+            <div class="profile-university">Singapore Management University</div>
             <div class="profile-details">
                 <div class="profile-location">
                     <i class="fas fa-map-marker-alt"></i>
@@ -20,14 +22,16 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
 }
 
 .profile-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .profile-image {
@@ -39,7 +43,7 @@
     overflow: hidden;
     display: flex;
     align-items: stretch;
-    justify-content: flex-start;
+    justify-content: center;
     border: none;
 }
 
@@ -53,9 +57,10 @@
 .profile-info {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     gap: 0.5rem;
+    text-align: center;
 }
 
 .profile-name {
@@ -63,14 +68,28 @@
     font-weight: 800;
     text-transform: capitalize;
     line-height: 1;
-    text-align: left;
+    text-align: center;
+}
+
+.profile-position {
+    font-size: 1.25rem;
+    color: #666;
+    text-align: center;
+    margin-bottom: 0.25rem;
+}
+
+.profile-university {
+    font-size: 1rem;
+    color: #666;
+    text-align: center;
+    margin-bottom: 0.5rem;
 }
 
 .profile-details {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .profile-location {
@@ -79,7 +98,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .profile-location i {
@@ -94,6 +113,7 @@
 
     .profile-content {
         gap: 1rem;
+        align-items: flex-start;
     }
 
     .profile-image {
@@ -101,15 +121,36 @@
         width: 100%;
     }
 
+    .profile-info {
+        align-items: flex-start;
+        text-align: left;
+    }
+
     .profile-name {
         font-size: 1.5rem;
         font-weight: 700;
         margin-bottom: 0.25rem;
+        text-align: left;
+    }
+
+    .profile-details {
+        align-items: flex-start;
     }
 
     .profile-location {
         font-size: 0.875rem;
         margin-bottom: 0.75rem;
+        justify-content: flex-start;
+    }
+
+    .profile-position {
+        font-size: 1rem;
+        text-align: left;
+    }
+
+    .profile-university {
+        font-size: 0.875rem;
+        text-align: left;
     }
 }
 </style> 
