--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -21,6 +21,7 @@
     <div class="intro-block">
         <p class="intro-label">others</p>
         <p class="intro-text">Enjoy building and occasionally crashing interplanetary rockets in Kerbal Space Program 🚀</p>
+        <p class="intro-text">If you wanna chat, drop me a text! <a href="https://instagram.com/emranpoh" target="_blank" class="intro-link"><i class="fab fa-instagram"></i></a> <a href="https://t.me/emranpoh" target="_blank" class="intro-link"><i class="fab fa-telegram"></i></a></p>
     </div>
   </div>
 </section>
