--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -3,7 +3,7 @@
     <div class="intro-block">
         <p class="intro-label">research</p>
         <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>amplifying human creativity</mark>. I design, build, and study tools that help novices develop domain expertise — with an emphasis on empowering humans to be more… human (authentic + expressive).</p>
-        <p class="intro-text">Here are some of my previous work <i class="fas fa-arrow-right arrow-icon"></i> <a href="/publications/" class="intro-link"><i class="fas fa-file-alt"></i></a> <a href="/projects/xr-physical-assault" class="intro-link"><i class="fas fa-microphone"></i></a></p>
+        <p class="intro-text">Here are some of my previous work <i class="fas fa-arrow-right arrow-icon"></i> <a href="/publications/art01" class="intro-link"><i class="fas fa-file-alt"></i></a> <a href="/projects/xr-physical-assault" class="intro-link"><i class="fas fa-microphone"></i></a></p>
     </div>
     <div class="intro-block">
         <p class="intro-label">position</p>
